chore: implement the gorilla mux
