# blog/blogrestfull/blog_endpoint.go
@@ -3,21 +3,40 @@ package main
 import (
 	"context"
 	"flag"
-	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
-	"net/http"
-
+	"fmt"
 	"github.com/golang/glog"
+	"github.com/gorilla/mux"
+	"github.com/samutayuga/samgrpcexploring/blog/cfg"
+	"github.com/samutayuga/samgrpcexploring/blog/restutil"
+
 	gw "github.com/samutayuga/samgrpcexploring/blog/blogpb"
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
+	"log"
+	"net/http"
 )
 
 var (
-	//command line option
-	//gRPC server endpoint
-	grpcServerEndPoint = flag.String("blog-server-endpoint", "localhost:50051", "gRPC Server Endpoint")
+	blogConfig cfg.Config
+	client     gw.BlogServiceClient
 )
 
+func init() {
+	blogConfig = cfg.LoadConfig()
+	opts := grpc.WithTransportCredentials(insecure.NewCredentials())
+	serverString := fmt.Sprintf("localhost:%d", blogConfig.ServerPort)
+	grpcServerEndPoint := flag.String("blog-server-endpoint", serverString, "gRPC Server Endpoint")
+	log.Printf("Using gRPC server at %s\n", *grpcServerEndPoint)
+	//dial grpc server
+	if conn, errDial := grpc.Dial(serverString, opts); errDial != nil {
+		panic(errDial)
+	} else {
+		client = gw.NewBlogServiceClient(conn)
+		restutil.BlogClient = client
+	}
+}
 func main() {
+	log.SetFlags(log.LstdFlags | log.Lshortfile)
 	flag.Parse()
 	defer glog.Flush()
 	if err := run(); err != nil {
@@ -30,14 +49,15 @@ func run() error {
 	ctx, cancel := context.WithCancel(ctx)
 	defer cancel()
 
-	//Register the gateway end point to grpc Server
-	//make sure the gRPC server is running
-	mux := runtime.NewServeMux()
-	opts := []grpc.DialOption{grpc.WithInsecure()}
-	err := gw.RegisterBlogServiceHandlerFromEndpoint(ctx, mux, *grpcServerEndPoint, opts)
-	if err != nil {
-		return err
-	}
-	//start http server and proxy the call to gRPC endpoint
-	return http.ListenAndServe(":8001", mux)
+	routers := mux.NewRouter()
+	routers.HandleFunc("/v1/samblog/{blogId}", restutil.ProcessASingleBlog).Methods("GET", "DELETE")
+	routers.HandleFunc("/v1/samblog", restutil.UpdateBlog).Methods("PATCH")
+	routers.HandleFunc("/v1/samblog", restutil.CreateBlog).Methods("POST")
+	routers.HandleFunc("/v1/samblog", restutil.ListBlog).Methods("GET")
+	routers.HandleFunc("/liveness", func(w http.ResponseWriter, r *http.Request) { w.WriteHeader(http.StatusOK) }).Methods("GET")
+	routers.HandleFunc("/readiness", func(w http.ResponseWriter, r *http.Request) { w.WriteHeader(http.StatusOK) }).Methods("GET")
+
+	httpServerString := fmt.Sprintf(":%d", blogConfig.EndpointPort)
+	log.Printf("Running REST end point at %d\n", blogConfig.EndpointPort)
+	return http.ListenAndServe(httpServerString, routers)
 }
